--- a/main.html
+++ b/main.html
@@ -1,24 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Colorful Squares</title>
-	<style>
-		.square {
-			width: 50px;
-			height: 50px;
-			display: inline-block;
-			margin: 10px;
-			background-color: #E6E6FA; /*lavender */
-			cursor: pointer;
-		}
-	</style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Focus Square</title>
+<style>
+    .container {
+        display: grid;
+        grid-template-columns: repeat(3, 100px); /* Adjust grid columns */
+        grid-gap: 10px; /* Adjust spacing between squares */
+    }
+
+    .square {
+        width: 100px; /* Adjust square width */
+        height: 100px; /* Adjust square height */
+        background-color: #E6E6FA; /* Default background color */
+        transition: background-color 0.5s ease; /* Smooth transition */
+    }
+
+    /* Additional class to highlight squares */
+    .highlight {
+        background-color: #6F4E37; /* Coffee color */
+    }
+</style>
 </head>
 <body>
-	<div class="square" id="square1" ></div>
-	<div class="square" id="square2" ></div>
-	<div class="square" id="square3" ></div>
 
-	<script type="text/javascript" src="./script.js">
-	</script>
+<div class="container">
+    <!-- Three squares with the same class -->
+    <!-- They will share the same behavior -->
+    <div id="square1" class="square"></div>
+    <div id="square2" class="square"></div>
+    <div id="square3" class="square"></div>
+</div>
+
+<script>
+    // Get the squares by their IDs
+    const square1 = document.getElementById('square1');
+    const square2 = document.getElementById('square2');
+    const square3 = document.getElementById('square3');
+
+    // Function to highlight other squares on hover
+    function highlightSquares() {
+        // Select all squares except the focused one
+        const squaresToHighlight = document.querySelectorAll('.square:not(.focus)');
+        
+        // Add highlight class to each square
+        squaresToHighlight.forEach(square => {
+            square.classList.add('highlight');
+        });
+    }
+
+    // Function to remove highlight from squares
+    function removeHighlight() {
+        // Select all squares with highlight class
+        const highlightedSquares = document.querySelectorAll('.highlight');
+
+        // Remove highlight class from each square
+        highlightedSquares.forEach(square => {
+            square.classList.remove('highlight');
+        });
+    }
+
+    // Event listeners for mouse enter and leave
+    square1.addEventListener('mouseenter', highlightSquares);
+    square1.addEventListener('mouseleave', removeHighlight);
+
+    square2.addEventListener('mouseenter', highlightSquares);
+    square2.addEventListener('mouseleave', removeHighlight);
+
+    square3.addEventListener('mouseenter', highlightSquares);
+    square3.addEventListener('mouseleave', removeHighlight);
+</script>
+
 </body>
 </html>
